Ballard theme css tweaks. Fixed spacing around slideshow/secondary nav when in header right

--- a/sites/all/themes/openscholar/ballard/css/ballard.css
+++ b/sites/all/themes/openscholar/ballard/css/ballard.css
@@ -90,7 +90,7 @@ h3.title a {color:#293352;}
 
 .sidebar h3.title,
 #content-bottom h3.title {
-color:#444;
+color:#666;
 background: url('../images/h3bg.png');
 padding: 7px 0 4px 8px;
  font-size: 1.2em;
@@ -200,7 +200,7 @@ color: #F3F3F1;
 /* SECONDARY NAV WHEN IN HEADER RIGHT  */ 
 #header-right #block-vsite_menus-scholar_secondary_menu  {
    width:260px;
-   margin-bottom: 30px;
+   margin: -10px 0 40px;
 }
 
 #header-right #block-vsite_menus-scholar_secondary_menu ul {
@@ -288,7 +288,7 @@ div.views-field-field-gallery-image-fid img {
     padding: 0;
 }
 
-.box-os_boxes_slideshow {margin:-18px 0 15px -18px;}
+.box-os_boxes_slideshow {margin: 0 0 15px 0;}
 
 #views_slideshow_singleframe_prev_os_slideshow-default,
 #views_slideshow_singleframe_next_os_slideshow-default 
@@ -296,7 +296,7 @@ div.views-field-field-gallery-image-fid img {
 
 .views_slideshow_controls .views_slideshow_pause,
 .views_slideshow_controls .views_slideshow_play {
-left:670px;
+left:97%;
 margin-top: 2px;
 }
 
@@ -324,7 +324,7 @@ background: #e6e6e6;
 height:22px;
 border:none;
 border-top:none;
-width: 690px;
+width: 99%;
 z-index: 1;
 }
 
